syntax = "proto3";

package todo.service.proto;

service TodoService {
    rpc GetTodos (EmptyRequest) returns (Response);
    rpc Get(GetRequest) returns (Response);
    rpc Create(CreateUpdateRequest) returns (Response);
    rpc Update(CreateUpdateRequest) returns (Response);
    rpc Delete(CreateUpdateRequest) returns (DeleteResponse);
}

message Todo {
    int32 id = 1;
    bool done = 2;
    string title = 3;
    string description = 4;
}

message EmptyRequest {};

message CreateUpdateRequest {
    Todo todo = 1;
}

message GetRequest {
    int32 id = 1;
}

message Response {
    bool created = 1;
    bool updated = 2;
    Todo todo = 3;
    repeated Todo todos = 4;
}

message DeleteResponse {
    bool deleted = 1;
}